--- a/Store.html
+++ b/Store.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <h1 id="store">Store PuntoP</h1>
+                <h1 id="store">Punto21</h1>
             </div>
             <div class="nav">
                 <ul>
