--- a/Store.html
+++ b/Store.html
@@ -17,7 +17,7 @@
             <div class="nav">
                 <ul>
                     <li><a href="#Productos">Productos</a></li>
-                    <li><a href="Terminos_Uso.html">Términos y Uso</a></li>
+                    <li><a href="Terminos_Uso.html">Términos y Condiciones</a></li>
                     <li><a href="login.html">Inicio de Sesión</a></li>
                 </ul>
             </div>
@@ -25,8 +25,8 @@
         <div class="content">
             <div class="introduccion">
                 <h1>Introducción</h1>
-             <h3 class="intro">Me complace darle la bienvenida a mi página web, su destino para adquirir una amplia variedad de productos de moda, incluyendo tenis, abrigos, t-shirts y anillos de One Piece.<br><br><br>
-                 Antes de realizar su compra, le invitamos a leer detenidamente los siguientes términos y condiciones que rigen su experiencia de compra en nuestra plataforma.<br><br><br>
+             <h3 class="intro">Me complace darle la bienvenida a mi página web, su destino para adquirir una amplia variedad de productos de moda, incluyendo tenis, abrigos, t-shirts y anillos.<br><br><br>
+                 Antes de realizar su compra, le invitamos a leer detenidamente los siguientes <a href="Terminos_Uso.html">Términos y Condiciones</a> que rigen su experiencia de compra en nuestra plataforma.<br><br><br>
                  En este espacio, le proporcionamos información importante sobre cómo operamos, qué derechos y responsabilidades conlleva su compra, y cómo protegemos su privacidad.<br><br><br>
                  Valoramos su confianza y estamos comprometidos en ofrecerle una experiencia de compra segura y satisfactoria.
 
